--- a/src/index.html
+++ b/src/index.html
@@ -1,6 +1,61 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <title>Weather Center</title>
+  <!-- Bootstrap CSS CDN -->
+  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
+  <style>
+    body { padding-top: 60px; }
+    .header { text-align: center; margin-bottom: 30px; }
+  </style>
+</head>
 <body>
-   Hello World from My Kubernetes cluster  {{OBS}} !!!!
+  <!-- Navigation Bar -->
+  <nav class="navbar navbar-expand-md navbar-dark bg-primary fixed-top">
+    <a class="navbar-brand" href="#">Weather Center</a>
+    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav">
+      <span class="navbar-toggler-icon"></span>
+    </button>
+    <div class="collapse navbar-collapse" id="navbarNav">
+      <ul class="navbar-nav mr-auto">
+        <li class="nav-item active">
+          <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
+        </li>
+        <!-- More nav items can be added here -->
+      </ul>
+    </div>
+  </nav>
+
+  <!-- Main Content -->
+  <div class="container">
+    <div class="jumbotron text-center">
+      <h1 class="display-4">Welcome to Weather Center</h1>
+      <p class="lead">Experience dynamic scalability with Docker &amp; Kubernetes.</p>
+      <hr class="my-4">
+      <p>Running: {{ obs }}</p>
+      <a class="btn btn-primary btn-lg" href="#" role="button">Learn more</a>
+    </div>
+    <!-- Example feature sections -->
+    <div class="row">
+      <div class="col-md-4">
+        <h2>Real-Time Monitoring</h2>
+        <p>Track system metrics and performance in real time.</p>
+      </div>
+      <div class="col-md-4">
+        <h2>Scalability</h2>
+        <p>Automatically scale to handle increased traffic.</p>
+      </div>
+      <div class="col-md-4">
+        <h2>High Availability</h2>
+        <p>Ensure continuous operation with Kubernetes clusters.</p>
+      </div>
+    </div>
+  </div>
+
+  <!-- Bootstrap JS and dependencies -->
+  <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.2/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
