--- a/src/index.html
+++ b/src/index.html
@@ -4,58 +4,86 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>Weather Center</title>
-  <!-- Bootstrap CSS CDN -->
+  <!-- Bootstrap CSS -->
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
   <style>
-    body { padding-top: 60px; }
-    .header { text-align: center; margin-bottom: 30px; }
+    body {
+      padding-top: 70px;
+    }
+    .weather-result {
+      margin-top: 20px;
+    }
   </style>
 </head>
 <body>
-  <!-- Navigation Bar -->
+  <!-- Navigation -->
   <nav class="navbar navbar-expand-md navbar-dark bg-primary fixed-top">
     <a class="navbar-brand" href="#">Weather Center</a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav">
       <span class="navbar-toggler-icon"></span>
     </button>
-    <div class="collapse navbar-collapse" id="navbarNav">
-      <ul class="navbar-nav mr-auto">
-        <li class="nav-item active">
-          <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
-        </li>
-        <!-- More nav items can be added here -->
-      </ul>
-    </div>
   </nav>
 
   <!-- Main Content -->
   <div class="container">
     <div class="jumbotron text-center">
-      <h1 class="display-4">Welcome to Weather Center</h1>
-      <p class="lead">Experience dynamic scalability with Docker &amp; Kubernetes.</p>
+      <h1 class="display-4">Welcome to Weather Center!</h1>
+      <p class="lead">Your interactive weather forecasting app built on Kubernetes.</p>
       <hr class="my-4">
-      <p>Running: {{ obs }}</p>
-      <a class="btn btn-primary btn-lg" href="#" role="button">Learn more</a>
+      <p>Running: {{OBS}}</p>
     </div>
-    <!-- Example feature sections -->
-    <div class="row">
-      <div class="col-md-4">
-        <h2>Real-Time Monitoring</h2>
-        <p>Track system metrics and performance in real time.</p>
+
+    <!-- Weather Search Form -->
+    <div class="row justify-content-center">
+      <div class="col-md-6">
+        <form id="weather-form" class="form-inline justify-content-center">
+          <input type="text" id="city-input" class="form-control mr-2" placeholder="Enter city name" required>
+          <button type="submit" class="btn btn-primary">Get Weather</button>
+        </form>
       </div>
-      <div class="col-md-4">
-        <h2>Scalability</h2>
-        <p>Automatically scale to handle increased traffic.</p>
-      </div>
-      <div class="col-md-4">
-        <h2>High Availability</h2>
-        <p>Ensure continuous operation with Kubernetes clusters.</p>
+    </div>
+
+    <!-- Weather Result -->
+    <div class="row weather-result justify-content-center">
+      <div class="col-md-8">
+        <div id="weather-info" class="alert alert-info" style="display:none;"></div>
       </div>
     </div>
   </div>
 
-  <!-- Bootstrap JS and dependencies -->
+  <!-- JavaScript to Fetch Weather Data -->
+  <script>
+    document.getElementById('weather-form').addEventListener('submit', function(e) {
+      e.preventDefault();
+      var city = document.getElementById('city-input').value;
+      if (city === "") return;
+
+      // Replace with your actual API key and endpoint if available.
+      var apiKey = "YOUR_API_KEY";
+      var url = "https://api.openweathermap.org/data/2.5/weather?q=" + city + "&appid=" + apiKey + "&units=metric";
+
+      fetch(url)
+        .then(function(response) {
+          if (!response.ok) throw new Error("City not found or API error.");
+          return response.json();
+        })
+        .then(function(data) {
+          var weatherInfo = "<strong>City:</strong> " + data.name + "<br>" +
+                            "<strong>Temperature:</strong> " + data.main.temp + " °C<br>" +
+                            "<strong>Weather:</strong> " + data.weather[0].description;
+          document.getElementById('weather-info').innerHTML = weatherInfo;
+          document.getElementById('weather-info').style.display = 'block';
+        })
+        .catch(function(error) {
+          document.getElementById('weather-info').innerHTML = error.message;
+          document.getElementById('weather-info').style.display = 'block';
+        });
+    });
+  </script>
+
+  <!-- Bootstrap and Dependencies -->
   <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.2/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
+
