--- a/src/index.html
+++ b/src/index.html
@@ -59,7 +59,7 @@
       if (city === "") return;
 
       // Replace with your actual API key and endpoint if available.
-      var apiKey = "YOUR_API_KEY";
+      var apiKey = "817a54562d9ca416932ec173996ede09";
       var url = "https://api.openweathermap.org/data/2.5/weather?q=" + city + "&appid=" + apiKey + "&units=metric";
 
       fetch(url)
