--- a/src/index.html
+++ b/src/index.html
@@ -1,89 +1,201 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Weather Center</title>
-  <!-- Bootstrap CSS -->
-  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
   <style>
-    body {
-      padding-top: 70px;
+    html, body {
+      margin: 0;
+      padding: 0;
+      height: 100vh;
+      font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+      overflow: hidden;
+      position: relative;
     }
-    .weather-result {
+
+    #background-overlay {
+      position: fixed;
+      top: 0; left: 0;
+      width: 100vw; height: 100vh;
+      background-image: url('clear.jpeg');
+      background-size: cover;
+      background-repeat: no-repeat;
+      background-position: center;
+      transition: opacity 1s ease-in-out;
+      z-index: -1;
+      opacity: 1;
+    }
+
+    #weather-container {
+      position: relative;
+      z-index: 1;
+      background: rgba(255, 255, 255, 0.3);
+      max-width: 400px;
+      padding: 20px;
+      margin: auto;
+      top: 50%;
+      transform: translateY(-50%);
+      border-radius: 15px;
+      box-shadow: 0 8px 32px rgba(0, 0, 0, 0.1);
+      backdrop-filter: blur(10px);
+      border: 1px solid rgba(255, 255, 255, 0.1);
+      text-align: center;
+    }
+
+    h2, label, p {
+      color: #fff;
+      margin: 8px 0;
+    }
+
+    input {
+      width: calc(100% - 16px);
+      padding: 8px;
+      box-sizing: border-box;
+      border-radius: 10px;
+      border: 1px solid white;
       margin-top: 20px;
+    }
+
+    button {
+      background: #debff4;
+      color: white;
+      padding: 10px;
+      border: none;
+      border-radius: 10px;
+      cursor: pointer;
+      margin-top: 20px;
+      width: 100px;
+      font-size: 15px;
+    }
+
+    button:hover {
+      background: #8b48d7;
+    }
+
+    #temp-div p {
+      font-size: 60px;
+      margin-top: -30px;
+    }
+
+    #current-icon {
+      width: 100px;
+      height: 100px;
+      margin: 0 auto;
+      display: block;
     }
   </style>
 </head>
 <body>
-  <!-- Navigation -->
-  <nav class="navbar navbar-expand-md navbar-dark bg-primary fixed-top">
-    <a class="navbar-brand" href="#">Weather Center</a>
-    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav">
-      <span class="navbar-toggler-icon"></span>
-    </button>
-  </nav>
+  <div id="background-overlay"></div>
 
-  <!-- Main Content -->
-  <div class="container">
-    <div class="jumbotron text-center">
-      <h1 class="display-4">Welcome to Weather Center!</h1>
-      <p class="lead">Your interactive weather forecasting app built on Kubernetes.</p>
-      <hr class="my-4">
-      <p>Running: {{OBS}}</p>
-    </div>
+  <div id="weather-container">
+    <img src="logo.png" alt="Weather Center Logo" style="height: 80px; margin-bottom: 20px;">
+    <input type="text" id="city-input" placeholder="Enter city..." list="city-suggestions" />
+    <datalist id="city-suggestions"></datalist>
+    <button onclick="getTodayWeather()">Search</button>
 
-    <!-- Weather Search Form -->
-    <div class="row justify-content-center">
-      <div class="col-md-6">
-        <form id="weather-form" class="form-inline justify-content-center">
-          <input type="text" id="city-input" class="form-control mr-2" placeholder="Enter city name" required>
-          <button type="submit" class="btn btn-primary">Get Weather</button>
-        </form>
-      </div>
-    </div>
-
-    <!-- Weather Result -->
-    <div class="row weather-result justify-content-center">
-      <div class="col-md-8">
-        <div id="weather-info" class="alert alert-info" style="display:none;"></div>
-      </div>
+    <div id="weather">
+      <h2 id="current-city"></h2>
+      <canvas id="current-icon"></canvas>
+      <div id="temp-div"><p id="current-temp"></p></div>
+      <p id="current-desc"></p>
+      <p id="current-details"></p>
+      <button onclick="location.href='forecast.html'">7-Day Forecast</button>
     </div>
   </div>
 
-  <!-- JavaScript to Fetch Weather Data -->
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/skycons/1396634940/skycons.min.js"></script>
   <script>
-    document.getElementById('weather-form').addEventListener('submit', function(e) {
-      e.preventDefault();
-      var city = document.getElementById('city-input').value;
-      if (city === "") return;
+    const API_KEY = "GZ89HBFLCJ8XLT7R8HEQJSTKK";
+    const skycons = new Skycons({ "color": "#fff" });
+    skycons.play();
 
-      // Replace with your actual API key and endpoint if available.
-      var apiKey = "817a54562d9ca416932ec173996ede09";
-      var url = "https://api.openweathermap.org/data/2.5/weather?q=" + city + "&appid=" + apiKey + "&units=metric";
+    const backgroundMap = {
+      "clear-day": "clear.jpeg",
+      "clear-night": "night.jpeg",
+      "partly-cloudy-day": "clear.jpeg",
+      "partly-cloudy-night": "night.jpeg",
+      "cloudy": "clear.jpeg",
+      "rain": "rain.jpeg",
+      "showers-day": "rain.jpeg",
+      "showers-night": "rain.jpeg",
+      "snow": "snow.jpeg",
+      "snow-showers-day": "snow.jpeg",
+      "snow-showers-night": "snow.jpeg"
+    };
 
-      fetch(url)
-        .then(function(response) {
-          if (!response.ok) throw new Error("City not found or API error.");
-          return response.json();
-        })
-        .then(function(data) {
-          var weatherInfo = "<strong>City:</strong> " + data.name + "<br>" +
-                            "<strong>Temperature:</strong> " + data.main.temp + " °C<br>" +
-                            "<strong>Weather:</strong> " + data.weather[0].description;
-          document.getElementById('weather-info').innerHTML = weatherInfo;
-          document.getElementById('weather-info').style.display = 'block';
-        })
-        .catch(function(error) {
-          document.getElementById('weather-info').innerHTML = error.message;
-          document.getElementById('weather-info').style.display = 'block';
+    function setBackground(icon) {
+      const bg = backgroundMap[icon] || 'clear.jpeg';
+      const overlay = document.getElementById("background-overlay");
+      overlay.style.opacity = 0;
+      setTimeout(() => {
+        overlay.style.backgroundImage = `url('${bg}')`;
+        overlay.style.opacity = 1;
+      }, 500);
+    }
+
+    async function getTodayWeather(cityName = null) {
+      let city = cityName || document.getElementById("city-input").value || "London,UK";
+      const url = `https://weather.visualcrossing.com/VisualCrossingWebServices/rest/services/timeline/${encodeURIComponent(city)}?unitGroup=metric&include=current&key=${API_KEY}`;
+
+      try {
+        const res = await fetch(url);
+        const data = await res.json();
+
+        const current = data.currentConditions || data.days[0];
+        document.getElementById("current-city").textContent = data.resolvedAddress;
+        document.getElementById("current-temp").textContent = `${Math.round(current.temp)}°C`;
+        document.getElementById("current-desc").textContent = current.conditions;
+        document.getElementById("current-details").textContent = `Humidity: ${current.humidity}% | Wind: ${current.windspeed} km/h`;
+        skycons.set("current-icon", current.icon);
+        setBackground(current.icon);
+
+        localStorage.setItem("lastCity", data.resolvedAddress);
+      } catch (err) {
+        console.error("Failed to fetch weather:", err);
+        alert("Could not retrieve weather. Try another city.");
+      }
+    }
+
+    document.getElementById("city-input").addEventListener("input", async (e) => {
+      const value = e.target.value;
+      if (value.length < 2) return;
+      const url = `https://geocoding-api.open-meteo.com/v1/search?name=${encodeURIComponent(value)}&count=5`;
+      const res = await fetch(url);
+      const data = await res.json();
+      const datalist = document.getElementById("city-suggestions");
+      datalist.innerHTML = "";
+      if (data.results) {
+        data.results.forEach(city => {
+          const opt = document.createElement("option");
+          opt.value = `${city.name}, ${city.country}`;
+          datalist.appendChild(opt);
         });
+      }
     });
-  </script>
 
-  <!-- Bootstrap and Dependencies -->
-  <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.2/dist/js/bootstrap.bundle.min.js"></script>
+    window.onload = () => {
+      const lastCity = localStorage.getItem("lastCity");
+
+      if (lastCity) {
+        getTodayWeather(lastCity);
+      } else if (navigator.geolocation) {
+        navigator.geolocation.getCurrentPosition(async position => {
+          const { latitude, longitude } = position.coords;
+          const reverseGeocodeURL = `https://geocode.maps.co/reverse?lat=${latitude}&lon=${longitude}`;
+          const geoRes = await fetch(reverseGeocodeURL);
+          const geoData = await geoRes.json();
+          const address = geoData.address || {};
+          const cityGuess = `${address.city || address.town || address.village || address.county || 'London'}, ${address.country_code?.toUpperCase() || 'UK'}`;
+          getTodayWeather(cityGuess);
+        }, () => {
+          getTodayWeather("London,UK");
+        });
+      } else {
+        getTodayWeather("London,UK");
+      }
+    };
+  </script>
 </body>
 </html>
-
